--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <img scr="WebBanner.png" alt="Banner" width="900" height="300">
+    <img src="WebBanner2023.png" alt="Banner" width="900" height="300">
     <h1>Hello!</h1>
   </head>
   <body>
