--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <title>Epic Website</title>
     <img src="WebBanner2023.png" alt="Banner" width="900" height="300">
     <h1>Hello!</h1>
   </head>
   <body>
-    
+    <h2>something</h2>
+    <p>
+      Waffle
+    </p>
+    </p>
   </body>
 </html>
