--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <title>Epic Website</title>
     <img src="WebBanner2023.png" alt="Banner" width="900" height="300">
+    <h1><b>ENG0018 Computer Laboratory 2024</b></h1>
+    <h2>Student URN: 6879824</h2>
     <h1>Hello!</h1>
+    <hr>
+    <h2 style="font-family:calibri"><b>Conference paper: 'Neuroscience in computing..'</b></h2>
+    <hr>
   </head>
   <body>
     <h2>something</h2>
