--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         This is some content
       </pre>
     </p>
+    <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre>
 “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an 
