--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ This is some content
       </pre>
     </p>
     <h3 id="Introduction">Introduction</h3>
-    <p id="date&time"></p>
+    <p id="date_time"></p>
     <script>
       //javascript to display the date and time on my webpage
       const d = new Date();
-      document.getElementByld("date&time").innerHTML = d;
+      document.getElementByld("date_time").innerHTML = d;
     </script>
     <button id="colorButton">Click me to change colour</button>
     <script>
