--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ This is some content
       </pre>
     </p>
     <h3 id="Introduction">Introduction</h3>
-    <p id="date_time"></p>
+    <p id="date_time">hello</p>
     <script>
       //javascript to display the date and time on my webpage
       const d = new Date();
