--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@ classifier confidence to drop, as in Vlachos (2008).”
       </tr>
     </table>
     <hr>
-    
+
+    <p id="date_time"></p>
+    <script>
+      const d = new Date();
+      document.getElementById("date_time").innerHTML=d;
+    </script>
     
     <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a>
     <h3 id="References">References</h3>
