--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Conference Project</title>
-    <img src="WebBanner2023.png" alt="Banner" width="auto" height="180">
+    <img src="WebBanner2023.png" alt="Banner" width="1750" height="180">
     <h1><b>ENG0018 Computer Laboratory 2024</b></h1>
     <h2>Student URN: 6879824</h2>
     <hr>
