--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Conference Project</title>
-    <img src="WebBanner2023.png" alt="Banner" width="100%" height="150">
+    <img src="WebBanner2023.png" alt="Banner" class="centre">
     <h1><b>ENG0018 Computer Laboratory 2024</b></h1>
     <h2>Student URN: 6879824</h2>
     <hr>
@@ -12,6 +12,13 @@
 
     <!style for tables>
       <style>
+        .centre {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 80%;
+          height: 150px;
+        }
         table {
           font-family: arial, sans-serif;
           border-collapse: collapse;
