--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1><b>ENG0018 Computer Laboratory 2024</b></h1>
     <h2>Student URN: 6879824</h2>
     <hr>
-    <h2 style="font-family:calibri"><b>Conference paper: 'Neuroscience in computing..'</b></h2>
+    <h2 style="font-family:calibri"><b>The use of Animal-Computer-Interaction in aiding animals</b></h2>
     <hr>
 
 
