--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Conference Project</title>
     <br>
     <img src="WebBanner2023.png" alt="Banner" class="centre">
-    <h2>ENG0018 Computer Laboratory 2024</h2>
-    <h2>Student URN: 6879824</h2>
+    <h2 style="text-align:center;">ENG0018 Computer Laboratory 2024</h2>
+    <h2 style="text-align:center;">Student URN: 6879824</h2>
     <hr>
     <h1 style="font-family:calibri;text-align:center;"><b>The use of Animal-Computer-Interaction in aiding animals</b></h1>
     <hr>
