--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       p.ex1 {
         margin-left: 250px;
         font-family: arial;
+        font-size: 11px;
       }
     </style>
   </head>
