--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <td><a href="#Introduction">Introduction</td>
       </tr>
       <tr>
-        <td><a href="#Analysis and discussion>Analysis and discussion</td>
+        <td><a href="#Analysis and discussion">Analysis and discussion</td>
       </tr>
       <tr>
         <td><a href="#References">References</td>
