--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
 </button>
 <script>
     async function getLastUpdatedTime() {
-        const username = 'nr0025';
-        const repo = 'FY0025';
+        const username = 'FEPSFY6879824';
+        const repo = 'FY6879824';
        
         const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
