--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
   <!-- ////////////////////////////// Word count function ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 <!-- Placeholder for total word count -->
-<p id="totalWordCount" style="font-size:40px;"></p>
+<p id="totalWordCount" style="font-size:40px;">display words:</p>
 <hr>
 <script>
   // Function to calculate and display word count for a specified section
