--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1 style="font-family:calibri;text-align:center;"><b>The use of Animal-Computer-Interaction in aiding animals</b></h1>
     <hr>
     <script>history.scrollRestoration = "manual"</script>
+
     <style>
         .centre {
           display: block;
@@ -46,6 +47,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  
   <style>
     .mySlides {display:none;}
   </style>
@@ -131,7 +133,7 @@
     <br>
     <h3 class="Title">1. Introduction</h3>
     <hr>
-    <p class="paraText">
+    <p class="paraText" id="Introduction_Text">
       The uses of Animal-Computer-Interactions are constantly expanding from research, zoos, farms and for domestic animals. Animals’ interactions with machines attributes for a deeper understanding of how animals think and act, thus allowing for animals’ quality of life to be improved significantly (<a href="#Mancini, C., & Nannoni, E. (2023)" class="linkText">Mancini, C., & Nannoni, E., 2023</a>). Understanding animal behaviour is essential as it allows us to successfully target important requirements for developing technologies. This leads to improved conservation efforts as advantageous technology can be used, suited to the environment. Maintenance of ecosystems health, disease management and human-animal interactions are all impacted by the use of ACI, highlighting the need for improvement in the field.
     </p>
     </div>
@@ -140,15 +142,15 @@
         <br>
         <h3 class="Title">2. The Importance of Understanding Animal Needs</h3>
         <hr>
-        <p class="paraText">     
+        <p class="paraText" id="2.Text1">     
           To make ACI more effective in aiding animals we must first understand what is responsible for achieving a positive improvement to the animals. The Five Domains of Animal Welfare model is often used to discover the link between wellbeing and lived experiences amongst animals. The model uses five layers to determine animal welfare, Nutrition(1), Environment(2), Physical Health(3), Behavioural interactions(4)  which lead to the final layer Mental state(5). These factors are checked at the individual level for every animal to ensure a positive effect on their wellbeing. The model’s use has been adopted by many organizations such as the Zoo and Aquarium Association and the RSPCA. (<a href="#Webber, S., Cobb, M. L., & Coe, J. (2022)" class="linkText">Webber, S., Cobb, M. L., & Coe, J., 2022</a>).
         </p>
-        <p class="paraText">
+        <p class="paraText" id="2.Text2">
           To increase the effectiveness of ACI technologies on animals’ lives, other models are used, such as the Coe Individual Competence Model. This model, developed for animal facility designers, help to create environments which encourage animals to develop competence, thus supporting welfare as less reliance on zoos occurs and they can become self-dependent. The 5 steps of this model, Choice(1), Control(2), Variety(3) and Complexity(4) leading to development of Competence(5) (<a href="#Webber, S., Cobb, M. L., & Coe, J. (2022)" class="linkText">Webber, S., Cobb, M. L., & Coe, J., 2022</a>). Increasing competence leads to independence, helping rehabilitated animals integrate back into the wild with the correct skills to survive.          
         </p>
         <img src="Figure1.jpg" alt="Figure 1" height="400px">
-        <p class="Figure1Text"><b>Figure 1.</b> Welfare Through Competence model</p>
-        <p class="paraText">
+        <p class="Figure1Text" id="2.Text3"><b>Figure 1.</b> Welfare Through Competence model</p>
+        <p class="paraText" id="2.Text4">
           In Figure 1, the Welfare through Competence (WtC) design is shown, this combines the two previously stated models, it is essential for creating and iterating on technologies made in ACI (<a href="#Webber, S., Cobb, M. L., & Coe, J. (2022)" class="linkText">Webber, S., Cobb, M. L., & Coe, J., 2022</a>). To achieve the most beneficial results for the animal targeted each section must be followed and questioned. In the example of tiger conservation and reintroduction into the wild, context of the situation is important, as animals in the wild should receive little human contact or help to ensure competence and independence. Therefore, when designing technology such as AI trail cameras that detect animals and their movements, relaying the information to park managers, camouflage is an aspect designers should focus on, including no sound or noise pollution is released by the devices distracting the tigers' daily activities (<a href="#GTFAdmin (2022)" class="linkText">GTFAdmin, 2022</a>). 
         </p>
     </div>
@@ -157,13 +159,13 @@
       <br>
       <h3 class="Title">3. Ethics in Animal-Computer-Interaction</h3>
       <hr>
-      <p class="paraText">     
+      <p class="paraText" id="3.Text1">     
         Animal-Computer-Interaction is a relatively new field of research starting early 2000s, meaning the principles and ethics of the subject are still in a volatile state. In research and development animals are often viewed as research instruments rather than living beings, as they cannot consent or state their best interest, this can lead to harm of these animals. Without taking the best interest of the animal into account it can lead to issues such as night-time lighting in chicken barns to stimulate productivity, which disturbs chickens’ natural body cycles (<a href="#Coghlan, S., & Parker, C. (2023)" class="linkText">Coghlan, S., & Parker, C., 2023</a>).
       </p>
-      <p class="paraText">
+      <p class="paraText" id="3.Text2">
 Recently a push for better practice has occurred. Bodies such as the Institutional Animal Care and Use Committee (IACUC) in the USA and Animal Welfare and Ethical Review Bodies (AWERBs) in the UK are responsible for ensuring ethical, scientifically sound and standardised practice in animal research (<a href="#Mohan, S., & Huneke, R. (2019)" class="linkText">Mohan, S., & Huneke, R., 2019</a>). New ACI research and development attempts to minimise any negative impact on the animal, mainly by increasing scrutiny on rules. Although these attempts to increase animals ‘enjoyment’ of research is a step in the correct direction, the interests of the study can be prioritised making regulations less important. In contrast human research, the interests of the individual are prioritised over the studies interests.
       </p>
-      <p class="paraText">
+      <p class="paraText" id="3.Text3">
 To date there is no legal ethics protocol that exists to regulate animal usage in research for developing animal technologies (<a href="#Mancini, C. (2017)" class="linkText">Mancini, C., 2017</a>). In <a href="#Clara Mancini. (2011)" class="linkText"> Animal-computer interaction: a manifesto Clara Mancini. (2011)</a> a set of new protocols are established which aim to 1) Improve animals life quality or expectancy, 2) Support animals in their activities, 3) Foster interspecies relationships, such as enabling communication between humans and dogs. If pushed these protocols would ensure animals a positive experience when receiving computer interaction (<a href="#Resner, B.I. (2001)" class="linkText">Resner, B.I., 2001</a>).
 
       </p>
@@ -173,24 +175,24 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
       <br>
       <h3 class="Title">4. Existing Animal-Computer-Interaction Technologies</h3>
       <hr>
-      <p class="paraText">
+      <p class="paraText" id="4.Text1">
          Recently household pets have become targeted by ACI. For example, the use of Human Computer Dog Interfaces. These systems can provide visual and auditory representations of the user and dog, when in different locations. This allows for feeding and interaction with the dog remotely. More complex systems provide puzzles for the animal to complete in order to receive the food, providing positive reinforcement which is useful in training dogs.
       </p>
-       <p class="paraText">
+       <p class="paraText" id="4.Text2">
           Wearable systems have increased in use as technology decreases in size over the years, this allows for devices to be attached to animals without disrupting their comfort or daily activities. Collar tags have been developed which allows for animals to gain access through pet flaps which are otherwise locked, collars for guide dogs allow for audio commands to be sounded through speakers (<a href="#Ritvo, S. E., & Allison, R. S. (2017)" class="linkText">Ritvo, S. E., & Allison, R. S., 2017</a>).
        </p>
-       <p class="paraText">
+       <p class="paraText" id="4.Text3">
           ACI has become increasingly common in studying animals. Touchscreens have been used to study cognition in apes, including visual preferences, music discrimination and perceptual categorization such as that of Figure 2 (<a href="#Tetsuro Matsuzawa (2021)" class="linkText">Tetsuro Matsuzawa, 2021</a>).
        </p>
        <img src="Figure2.jpg" alt="Figure 2" height="200px">
-        <p class="Figure2Text"><b>Figure 2.</b> Chimpanzee memory research</p>
+        <p class="Figure2Text" id="4.Text4"><b>Figure 2.</b> Chimpanzee memory research</p>
     </div>
 
     <div id="Conclusion">
       <br>
       <h3 class="Title">5. Conclusion</h3>
       <hr>
-      <p class="paraText">     
+      <p class="paraText" id="conclusion">     
         Understanding animals’ needs and behaviours is essential for enhancing ACI technologies to promote conservation efforts, animal independence and rehabilitation. As ACI advances, its applications will expand, meaning a structured and regulated approach is crucial to ensure the creation of these new technologies to ensure a healthy and positive environment for the animals.
       </p>
     </div>
@@ -346,7 +348,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
   <!-- ////////////////////////////// Word count function ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 <!-- Placeholder for total word count -->
-<p id="totalWordCount" style="font-size:40px;">display words:</p>
+<p id="totalWordCount"></p>
 <hr>
 <script>
   // Function to calculate and display word count for a specified section
@@ -363,10 +365,13 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction_InText");
-    const AnalysisCount = displayWordCount("Analysis_InText");
+    const IntroductionCount = displayWordCount("Introduction_Text");
+    const secondSection = displayWordCount("2.Text1") + displayWordCount("2.Text2") + displayWordCount("2.Text3") + displayWordCount("2.Text4");
+    const thirdSection = displayWordCount("3.Text1") + displayWordCount("3.Text2") + displayWordCount("3.Text3");
+    const fourthSection = displayWordCount("4.Text1") + displayWordCount("4.Text2") + displayWordCount("4.Text3") + displayWordCount("4.Text4");
+    const conclusion = displayWordCount("conclusion");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount;
+    const totalWordCount = IntroductionCount + secondSection + thirdSection + fourthSection + conclusion;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
