--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2 style="text-align:center;">ENG0018 Computer Laboratory 2024</h2>
     <h2 style="text-align:center;">Student URN: 6879824</h2>
     <hr>
-    <h1 style="font-family:calibri;text-align:center;"><b>The use of Animal-Computer-Interaction in aiding animals</b></h1>
+    <h1 style="font-family:calibri;text-align:center;"><b>The Development and Use of Animal-Computer-Interaction</b></h1>
     <hr>
     <script>history.scrollRestoration = "manual"</script>
 
