--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
     </div>
     </div>
 
-
+    <video src="" width="800" height="450" controls></video>
+    
+    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
