--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         .linkButton {
           font-size: 15px;
           color: cadetblue;
-          padding-left: 46.5%;
+          /*padding-left: 46.5%;*/
+          display: block;
+          margin: 0 auto;
         }
     </style>
 
