--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           font-size: 15px;
           color: cadetblue;
           /*padding-left: 46.5%;*/
-          text-allign:center;
+          text-align:center;
         }
     </style>
 
