--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           <a href="https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ " class="linkText">https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ </a>
         </p>
         <p>
-          <a href="https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ " class="linkButton" style="text-align:center";>Article</a>
+          <a href="https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ " class="linkButton" style="text-align:center;">Article</a>
         </p>
       </div>
       <div id="Coghlan, S., & Parker, C. (2023)">
