--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 
   <body style="background-color:white;margin-left:50px;">
-
+  <script>history.scrollRestoration = "manual"</script>
     <style>
         .paraText {
           margin-left: 2px;
