--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
           padding-left: 47%;
           
         }
+        .middleText {
+          text-align: center;
+        }
+     
     </style>
 
     <table id="Table of Content">
@@ -215,7 +219,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Mancini, C. (2017). Towards an animal-centred ethics for Animal–Computer Interaction. International Journal of Human-Computer Studies, 98, 221–233. 
           <a href="https://doi.org/10.1016/j.ijhcs.2016.04.008" class="linkText">https://doi.org/10.1016/j.ijhcs.2016.04.008</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.1016/j.ijhcs.2016.04.008" class="linkButton">Article</a>
         </p>
       </div>
@@ -224,7 +228,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Webber, S., Cobb, M. L., & Coe, J. (2022). Welfare Through Competence: A Framework for Animal-Centric Technology Design. Frontiers in Veterinary Science, 9, 885973–885973. 
           <a href="https://doi.org/10.3389/fvets.2022.885973" class="linkText">https://doi.org/10.3389/fvets.2022.885973</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.3389/fvets.2022.885973" class="linkButton">Article</a>
         </p>
       </div>
@@ -233,7 +237,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Ritvo, S. E., & Allison, R. S. (2017). Designing for the exceptional user: Nonhuman animal-computer interaction (ACI). Computers in Human Behavior, 70, 222–233. 
           <a href="https://doi.org/10.1016/j.chb.2016.12.062" class="linkText">https://doi.org/10.1016/j.chb.2016.12.062</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.1016/j.chb.2016.12.062" class="linkButton">Article</a>
         </p>
       </div>
@@ -242,7 +246,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Mohan, S., & Huneke, R. (2019). The Role of IACUCs in Responsible Animal Research. ILAR Journal, 60(1), 43–49. 
           <a href="https://doi.org/10.1093/ilar/ilz016" class="linkText">https://doi.org/10.1093/ilar/ilz016</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.1093/ilar/ilz016" class="linkButton">Article</a>
         </p>
       </div>
@@ -251,7 +255,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Clara Mancini. (2011). Animal-computer interaction: a manifesto. interactions 18, 4 (July + August 2011), 69–73. 
           <a href="https://doi.org/10.1145/1978822.1978836" class="linkText">https://doi.org/10.1145/1978822.1978836</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.1145/1978822.1978836" class="linkButton">Article</a>
         </p>
       </div>
@@ -260,7 +264,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Resner, B.I. (2001). Rover@Home : computer mediated remote interaction between humans and dogs. [online] dspace.mit.edu. Available at: 
           <a href="https://dspace.mit.edu/handle/1721.1/62357" class="linkText">https://dspace.mit.edu/handle/1721.1/62357</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://dspace.mit.edu/handle/1721.1/62357" class="linkButton">Article</a>
         </p>
       </div>
@@ -269,7 +273,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           GTFAdmin (2022). Tiger, Tiger, in the Night…Now Visible in Real Time – Global Tiger Forum. [online] Globaltigerforum.org. Available at: 
           <a href="https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ " class="linkText">https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ </a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://globaltigerforum.org/tiger-tiger-in-the-nightnow-visible-in-real-time/ " class="linkButton">Article</a>
         </p>
       </div>
@@ -278,7 +282,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Coghlan, S., & Parker, C. (2023). Harm to Nonhuman Animals from AI: a Systematic Account and Framework. Philosophy & Technology, 36(2), 25-. 
           <a href="https://doi.org/10.1007/s13347-023-00627-6" class="linkText">https://doi.org/10.1007/s13347-023-00627-6</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.1007/s13347-023-00627-6" class="linkButton">Article</a>
         </p>
       </div>
@@ -287,11 +291,10 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           Tetsuro Matsuzawa (2021). Primate Memory Inference. 
           <a href="https://doi.org/10.37282/991819.21.51" class="linkText">https://doi.org/10.37282/991819.21.51</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.37282/991819.21.51" class="linkButton">Article</a>
         </p>
       </div>
-      <p style="text-align: center;">hello</p>
     </div>
     </div>
 
