--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .linkButton {
           font-size: 15px;
           color: cadetblue;
-          padding-left: 47%;
+          /*padding-left: 47%;*/
           
         }
         .middleText {
