--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
           ACI has become increasingly common in studying animals. Touchscreens have been used to study cognition in apes, including visual preferences, music discrimination and perceptual categorization such as that of Figure 2 (<a href="#Tetsuro Matsuzawa (2021)" class="linkText">Tetsuro Matsuzawa, 2021</a>).
        </p>
        <a href="https://doi.org/10.37282/991819.21.51"><img src="Figure2.jpg" alt="Figure 2" height="200px"></a>
-        <p class="Figure2Text" id="4.Text4"><b>Figure 2.</b> Chimpanzee memory research</p>
+        <p class="Figure2Text" id="4.Text4"><b>Figure 2.</b> Chimpanzee memory research (<a href="#Tetsuro Matsuzawa (2021)" class="linkText">Tetsuro Matsuzawa, 2021</a>)</p>
     </div>
 
     <div id="Conclusion">
