--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 70%;
+          width: 500px;
           height: 100px;
         }
         table {
