--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
         <p class="Reference">
           Mancini, C., & Nannoni, E. (2023). Editorial: Animal-computer interaction and beyond: The benefits of animal-centered research and design. Frontiers in Veterinary Science, 9, 1109994–1109994. <a href="https://doi.org/10.3389/fvets.2022.1109994" class="linkText">https://doi.org/10.3389/fvets.2022.1109994</a>
         </p>
-        <p>
+        <p class="middleText">
           <a href="https://doi.org/10.3389/fvets.2022.1109994" class="linkButton">Article</a>
         </p>
       </div>
