--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
     <!-- Last commit time display -->
-<div id="last-updated">Loading last update time...</div>
+<div id="last-updated" class="middleText">Loading last update time...</div>
 <!-- Verify Button -->
 <button onclick="verifyLastUpdatedTime()" style="display: block; margin: 10px auto; padding: 8px 16px;">
     Verify Last Modified Time
@@ -361,7 +361,7 @@ To date there is no legal ethics protocol that exists to regulate animal usage i
   <!-- ////////////////////////////// Word count function ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 <!-- Placeholder for total word count -->
-<p id="totalWordCount"></p>
+<p id="totalWordCount" class="middleText"></p>
 <hr>
 <script>
   // Function to calculate and display word count for a specified section
